relative image src

--- a/canvas.html
+++ b/canvas.html
@@ -144,7 +144,7 @@
 <div class="container">
     <div class="originalPic">
     <h1>Original Image</h1>
-    <img src="C:\Users\Suman\Downloads\Image Processing using python\image_Assets\random-Image\js.png" alt="original Img" />
+    <img src="\image_Assets\random-Image\js.png" alt="original Img" />
     </div>
     <div class="drawing">
         <h1 style="color:black;text-shadow:none">Drawing</h1>
