--- a/canvas.html
+++ b/canvas.html
@@ -144,7 +144,7 @@
 <div class="container">
     <div class="originalPic">
     <h1>Original Image</h1>
-    <img src="\image_Assets\random-Image\js.png" alt="original Img" />
+    <img src="https://github.com/s-4-m-a-n/Image-processing-from-scratch/blob/master/image_Assets/random-Image/js.png" alt="original Img" />
     </div>
     <div class="drawing">
         <h1 style="color:black;text-shadow:none">Drawing</h1>
